# learn-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Memcheck.cmake  NoInSourceBuilds.cmake  Testing.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
test/: CMakeLists.txt
test/effective/: CMakeLists.txt  item_01_test.cpp
test/language/: CMakeLists.txt  arrays_test.cpp  classes_test.cpp  concurrency_test.cpp  exceptions_test.cpp  inheritence_test.cpp  lambdas_test.cpp  map_test.cpp  math_test.cpp  move_test.cpp  pointers_test.cpp  polymorphism_test.cpp  primitives_test.cpp  regex_test.cpp  string_test.cpp  templates_test.cpp  vector_test.cpp
test/modern_effective/: CMakeLists.txt  item_01_test.cpp
test/more_effective/: CMakeLists.txt  item_01_test.cpp
